fix(nav): center align icons over label

--- a/spot-client/src/common/css/nav/_nav-button.scss
+++ b/spot-client/src/common/css/nav/_nav-button.scss
@@ -1,8 +1,11 @@
 .nav-button {
+    align-items: center;
     background-color: transparent;
     border: 0;
     color: inherit;
     cursor: pointer;
+    display: flex;
+    flex-direction: column;
     font-size: inherit;
     margin: 10px 5px;
 
